--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,7 @@
 spring.application.name=CabaPro
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+# Use file-based H2 database so data persists between runs
+# Points to ./data/testdb (creates files testdb.mv.db / testdb.trace.db in project data/)
+spring.datasource.url=jdbc:h2:file:./data/testdb;DB_CLOSE_DELAY=-1;AUTO_SERVER=TRUE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
